--- a/jl_app/package.json
+++ b/jl_app/package.json
@@ -2,6 +2,15 @@
   "name": "jl_app",
   "version": "0.1.0",
   "private": true,
+  "proxy": {
+    "/api": {
+      "target": "http://localhost:8080",
+      "pathRewrite": {
+        "^/api" : ""
+      },
+      "changeOrigin": true
+    }
+  },
   "dependencies": {
     "antd": "~3.9.3",
     "antd-iconfont": "^3.0.3",
