JesseYoung: 首页天气提交

--- a/jl_app/package.json
+++ b/jl_app/package.json
@@ -6,7 +6,7 @@
     "/api": {
       "target": "http://localhost:8080",
       "pathRewrite": {
-        "^/api" : ""
+        "^/api": ""
       },
       "changeOrigin": true
     }
@@ -106,7 +106,7 @@
         [
           {
             "libraryName": "antd",
-            "style": true
+            "style": "css"
           }
         ]
       ]
